--- a/app/views/buyers/new.html.erb
+++ b/app/views/buyers/new.html.erb
@@ -1,21 +1,8 @@
-<% if !@resume.errors.empty? %>
-    <div class = "alert alert-error">
-
-      <ul>
-        <% @resume.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-      </ul>
-
-    </div>
-<% end %>
-
 <div class = "well">
-  <%= form_for @resume, html: { multipart: true } do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-      <%= f.label :attachment %>
-      <%= f.file_field :attachment %>
-      <%= f.submit "Save", class: "btn btn-primary" %>
+  <%= form_for @buyer, url: {action: "create"} do |e| %>
+      <%= render partial: "buyers/form" , locals: {:f => e} %>
+
+      <%= e.submit "Save", class: "btn-block btn-primary" %>
   <% end %>
 </div>
+
