--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,11 +34,10 @@
           <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
         </div>
 
-        <div class="actions">
+
           <%= f.submit "Sign up",class:"btn-primary btn-block" %>
-        </div>
       <% end %>
   </div>
 </div>
-
+<%= resource %>
 <!--<%= render "devise/shared/links" %>-->
