--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,4 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-
+<h1>Welcome</h1>
 <% if !flash[:notice].blank? %>
     <div class = "alert alert-info">
       <%= flash[:notice] %>
