--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to "Home", root_path %></li>
-      <li><a href="#">Page 1</a></li>
+      <li><%= link_to "Buyer", buyers_new_path %></li>
       <li><a href="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
